--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -10,7 +10,7 @@ const t = useTranslations(lang);
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="icon" type="image/svg+xml" href="/src/assets/_C9A0277.webp" />
+    <link rel="icon" type="image/svg+xml" href="/portfolio.svg" />
     <title>{t("title")}</title>
   </head>
   <body>
